Fix dark mode design

--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -42,11 +42,11 @@
 }
 
 .markdown h1 {
-  @apply leading-tight border-b text-4xl font-semibold mb-4 mt-6 pb-2;
+  @apply leading-tight border-b border-gray-200 dark:border-gray-800 text-4xl font-semibold mb-4 mt-6 pb-2;
 }
 
 .markdown h2 {
-  @apply leading-tight border-b text-2xl font-semibold mb-4 mt-6 pb-2;
+  @apply leading-tight border-b border-gray-200 dark:border-gray-800 text-2xl font-semibold mb-4 mt-6 pb-2;
 }
 
 .markdown h3 {
@@ -66,15 +66,15 @@
 }
 
 .markdown blockquote {
-  @apply text-base border-l-4 border-gray-300 pl-4 pr-4 text-gray-600;
+  @apply text-base border-l-4 border-gray-300 dark:border-gray-700 pl-4 pr-4 text-gray-600;
 }
 
 .markdown code {
-  @apply font-mono text-sm inline bg-gray-200 dark:bg-gray-700 rounded px-1 py-05;
+  @apply font-mono text-sm inline bg-gray-200 dark:bg-gray-800 rounded px-1 py-05;
 }
 
 .markdown pre {
-  @apply bg-gray-100 dark:bg-gray-700 rounded p-4;
+  @apply bg-gray-100 dark:bg-gray-800 rounded p-4;
 }
 
 .markdown pre code {
@@ -90,19 +90,19 @@
 }
 
 .markdown kbd {
-  @apply text-xs inline-block rounded border px-1 py-05 align-middle font-normal font-mono shadow;
+  @apply text-xs inline-block rounded border border-gray-200 dark:border-gray-800 px-1 py-05 align-middle font-normal font-mono shadow;
 }
 
 .markdown table {
-  @apply text-base border-gray-600;
+  @apply text-base border-gray-200 dark:border-gray-800;
 }
 
 .markdown th {
-  @apply border py-1 px-3;
+  @apply border border-gray-200 dark:border-gray-800 py-1 px-3;
 }
 
 .markdown td {
-  @apply border py-1 px-3;
+  @apply border border-gray-200 dark:border-gray-800 py-1 px-3;
 }
 
 /* Override pygments style background color. */
